--- a/project_06/project_06.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
+++ b/project_06/project_06.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
@@ -1,27 +1,27 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"0.645649",
-   "Default View_TopLeft":"0,-454",
+   "Default View_ScaleFactor":"0.55603",
+   "Default View_TopLeft":"-158,-585",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:9.0 non-TLS
 #  -string -flagsOSRD
-preplace port DDR -pg 1 -lvl 5 -x 1480 -y -90 -defaultsOSRD
-preplace port FIXED_IO -pg 1 -lvl 5 -x 1480 -y -60 -defaultsOSRD
-preplace portBus mode_sFREQ -pg 1 -lvl 1 -x 430 -y -210 -defaultsOSRD -top
-preplace inst processing_system7_0 -pg 1 -lvl 1 -x 260 -y 0 -defaultsOSRD
-preplace inst util_vector_logic_0 -pg 1 -lvl 2 -x 630 -y 140 -defaultsOSRD
-preplace inst ila_0 -pg 1 -lvl 4 -x 1360 -y -20 -defaultsOSRD
-preplace inst p05_dds_0 -pg 1 -lvl 3 -x 940 -y -30 -defaultsOSRD
-preplace netloc processing_system7_0_FCLK_CLK0 1 0 4 20 -140 460 -120 770 -120 1110
-preplace netloc processing_system7_0_FCLK_RESET0_N 1 1 1 470 80n
-preplace netloc util_vector_logic_0_Res 1 2 1 770 -30n
-preplace netloc sw_in_1 1 1 2 490J -10 N
-preplace netloc p05_dds_0_Cos_val 1 3 1 1090 -20n
-preplace netloc p05_dds_0_Sin_val 1 3 1 1100 -40n
-preplace netloc processing_system7_0_DDR 1 1 4 470J -130 NJ -130 NJ -130 1460
-preplace netloc processing_system7_0_FIXED_IO 1 1 4 480J -110 NJ -110 NJ -110 1450
-levelinfo -pg 1 0 260 630 940 1360 1480
-pagesize -pg 1 -db -bbox -sgen 0 -370 1590 240
+preplace port DDR -pg 1 -lvl 5 -x 1610 -y -40 -defaultsOSRD
+preplace port FIXED_IO -pg 1 -lvl 5 -x 1610 -y -10 -defaultsOSRD
+preplace portBus mode_sFREQ -pg 1 -lvl 0 -x 0 -y 100 -defaultsOSRD
+preplace inst processing_system7_0 -pg 1 -lvl 1 -x 380 -y -60 -defaultsOSRD
+preplace inst util_vector_logic_0 -pg 1 -lvl 2 -x 750 -y -30 -defaultsOSRD
+preplace inst ila_0 -pg 1 -lvl 4 -x 1370 -y -40 -defaultsOSRD
+preplace inst p05_dds_0 -pg 1 -lvl 3 -x 1070 -y -30 -defaultsOSRD
+preplace netloc processing_system7_0_FCLK_CLK0 1 0 4 20 -200 580 -90 890 -110 1220
+preplace netloc processing_system7_0_FCLK_RESET0_N 1 1 1 590 -30n
+preplace netloc util_vector_logic_0_Res 1 2 1 N -30
+preplace netloc sw_in_1 1 0 3 N 100 N 100 890
+preplace netloc p05_dds_0_Cos_val 1 3 1 N -20
+preplace netloc p05_dds_0_Sin_val 1 3 1 N -40
+preplace netloc processing_system7_0_DDR 1 1 4 N -140 N -140 N -140 1470
+preplace netloc processing_system7_0_FIXED_IO 1 1 4 N -120 N -120 N -120 1460
+levelinfo -pg 1 0 380 750 1070 1370 1610
+pagesize -pg 1 -db -bbox -sgen -160 -720 1720 900
 "
 }
 {
